# rarcane

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  config.example.toml  deny.toml  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  release-please-config.json  server.json
.cargo/: config.toml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  docker-publish.yml  openwiki-update.yml  release-please.yml  release.yml
apps/web/: package.json
config/: Dockerfile
docs/: AGENTS-FIRST.md  API.md  ARCHITECTURE.md  AUTH.md  CI.md  CONFIG.md  DEPLOYMENT.md  DOCKER.md  ENV.md  JUSTFILE.md  MCPORTER.md  MCP_SCHEMA.md  OBSERVABILITY.md  PHILOSOPHY.md  PLUGINS.md  QUICKSTART.md  README.md  RUST.md  SCRIPTS.md  SYSTEMD.md  TESTING.md  WEB.md
docs/sessions/: 2026-07-18-comprehensive-review-release-cleanup.md
docs/specs/: scaffold-intent-handoff.md
docs/superpowers/plans/: 2026-05-23-rustcane-arcane-mcp.md
openwiki/: .last-update.json  quickstart.md
openwiki/operations/: openwiki-update-workflow.md
plugins/rarcane/: .mcp.json  gemini-extension.json  mcp.json
plugins/rarcane/.claude-plugin/: plugin.json
plugins/rarcane/.codex-plugin/: plugin.json
plugins/rarcane/hooks/: hooks.json
plugins/rarcane/skills/rarcane/: SKILL.md
plugins/rustcane/: gemini-extension.json
plugins/rustcane/.claude-plugin/: plugin.json
plugins/rustcane/.codex-plugin/: plugin.json
scripts/: README.md  check-coupled-files.sh  check-runtime-current.sh  check-schema-docs.py  install.sh  pre-release-check.sh  test-template-features.sh  validate-plugin-layout.sh
src/: actions.rs  actions_tests.rs  app.rs  app_tests.rs  arcane.rs  arcane_tests.rs  cli.rs  cli_tests.rs  config.rs  config_tests.rs  logging.rs  main.rs
src/cli/: setup.rs  setup_tests.rs
src/cli/doctor/: checks.rs  checks_tests.rs
src/mcp/: prompts.rs  prompts_tests.rs  rmcp_server.rs  rmcp_server_tests.rs  schemas.rs  schemas_tests.rs  tools.rs  tools_tests.rs  transport_tests.rs
src/server/: routes.rs  routes_tests.rs
tests/: plugin_contract.rs  template_invariants.rs  tool_dispatch.rs
tests/mcporter/: test-mcp.sh
xtask/: Cargo.toml  README.md
xtask/src/: main.rs  patterns.rs
xtask/src/patterns/: actions.rs  checks.rs  surfaces.rs  util.rs
