# =============================================================================
# Cargo.toml — Workspace root for the rarcane project
#
# TEMPLATE: This is a cargo workspace containing two crates:
#   - . (the main library/binary crate)
#   - xtask/ (repo automation: dist, ci, symlink-docs, check-env)
#
# When creating your own server, rename "rarcane" and add your own
# workspace members if needed.
# =============================================================================

[workspace]
# TEMPLATE: Add any additional crates here (e.g. a shared types crate).
members = [".", "xtask"]
resolver = "2"

[package]
name = "rarcane"
version = "0.5.0"
edition = "2021"
rust-version = "1.90"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "arcane", "docker", "containers", "rmcp"]
repository = "https://github.com/jmagar/arcane-rmcp"
homepage = "https://github.com/jmagar/arcane-rmcp#readme"
description = "Rust MCP server and CLI for Arcane Docker and container management with action-dispatched tools and plugin packaging."
autobins = false

[[bin]]
name = "rarcane"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "2.2.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
  "elicitation",
  "schemars",
] }
tower-http = { version = "0.7", features = ["cors", "limit", "trace"] }
tower = { version = "0.5", features = ["limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2.1"

# Time
chrono = "0.4"

# Config
toml = "1.1"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (stub — replace with your real transport: GraphQL, REST, gRPC, etc.)
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }

# Platform dirs — for default_data_dir() (~/.rarcane detection)
# TEMPLATE: Used in config.rs default_data_dir(). Keep this dep.
dirs = "6"

# Errors
anyhow = "1"
thiserror = "2"
dotenvy = "0.15.7"

[features]
default = []
test-support = []

[dev-dependencies]
rarcane = { path = ".", features = ["test-support"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
rmcp = { version = "2.2.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
